--- a/resources/sass/layout/showMembers.scss
+++ b/resources/sass/layout/showMembers.scss
@@ -50,7 +50,7 @@
 
     &__details {
         width:100%;
-        background-color: rgba($color-primary, 0.2);
+        background-color: $color-white;
         padding:  1rem;
         margin-bottom:1rem;
     }
