--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1692,7 +1692,6 @@ body {
   padding: 0.5rem;
   font-size: 1.1rem;
   color: #7f8c8d;
-  margin-bottom: 1rem;
 }
 .form input:focus {
   outline: 0;
@@ -1715,7 +1714,7 @@ body {
   -moz-transition: 0.2s all;
   -ms-transition: 0.2s all;
   -o-transition: 0.2s all;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .form input[type=submit]:focus {
   border: none;
@@ -1900,7 +1899,7 @@ body {
 }
 .member__details {
   width: 100%;
-  background-color: rgba(0, 168, 255, 0.2);
+  background-color: #fff;
   padding: 1rem;
   margin-bottom: 1rem;
 }
